--- a/client/src/compoment/Common/card/Card.module.css
+++ b/client/src/compoment/Common/card/Card.module.css
@@ -5,8 +5,10 @@
     background: #1D1D1D;
     padding: 30px;
     border-radius: 20px;
-    text-align: center;
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 .headingWrapper{
     display: flex;
