--- a/client/src/compoment/Common/Navigation/Navigation.module.css
+++ b/client/src/compoment/Common/Navigation/Navigation.module.css
@@ -1,5 +1,8 @@
 .navbar {
     padding:  20px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .header{
@@ -12,4 +15,21 @@
 }
 .headerText{
     margin-left: 15px;
+}
+
+.logoutButton{
+    background: none;
+    cursor: pointer;
+}
+.navRight{
+    display: flex;
+    align-items: center;
+}
+
+.avatar{
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #0077ff;
+    margin: 0 20px;
+    margin-right: 10px;
 }
